<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/transaction_ledger" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>


    <item android:title="@string/scheduling">
        <menu>
            <item
                android:id="@+id/nav_budget"
                android:title="@string/budget"
                android:icon="@drawable/ic_bk_budget"/>

            <item
                android:id="@+id/nav_periodic_transaction"
                android:title="@string/periodic_transaction"
                android:icon="@drawable/ic_update_black"/>
        </menu>
    </item>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
