<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_transaction_by_date"
        android:orderInCategory="100"
        android:title="@string/search_by_date"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search_transaction_by_time"
        android:orderInCategory="100"
        android:title="@string/search_by_time"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search_transaction_by_items"
        android:orderInCategory="100"
        android:title="@string/search_by_items"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
