<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/from" />

    <TextView
        android:id="@+id/txt_date_from"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listitem_singleline_texticon_height"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/spinner_holo_light"
        android:gravity="center"
        android:text="@string/start" />

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="center"
        android:text="@string/to" />

    <TextView
        android:id="@+id/txt_date_to"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listitem_singleline_texticon_height"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/spinner_holo_light"
        android:gravity="center"
        android:text="@string/end" />
</LinearLayout>
