<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/loading_text"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:gravity="center"
        android:paddingLeft="@dimen/spacing_48"
        android:paddingRight="@dimen/spacing_48"
        android:text="@string/sync_in_progress" />

    <TextView
        android:id="@+id/btnTryAgain"
        style="@style/ButtonCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loading_text"
        android:layout_centerHorizontal="true"
        android:lines="1"
        android:text="@string/try_again" />

    <ProgressBar
        android:id="@+id/prgSyncing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loading_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/spacing_small"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/loading_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_48"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_splash_screen" />

    <TextView
        android:id="@+id/btnLogout"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/signout"
        android:visibility="gone" />

</RelativeLayout>