<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".transaction.SearchTransactionFragment">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/select_date"
        android:id="@+id/textView2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/select_date_start"
            android:id="@+id/btndateStart"
            android:layout_weight="2"
            android:background="@null"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/select_date_end"
            android:id="@+id/btndateEnd"
            android:layout_weight="2"
            android:background="@null"
           />
    </LinearLayout>





    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:text="Đồng ý"
        android:id="@+id/btnOki"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:background="@color/colorAccent"/>

</LinearLayout>